--- a/main.css
+++ b/main.css
@@ -1,9 +1,7 @@
-body {
-  background-color: #blue;
-}
+body {background-color: #ffe680; }
 h1 {
   font-size: 90px;
-  color: black;
+  color: ;
 }
 
 
