--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
-body {background-color: #ffe680; }
+body {
+  background-color: #ffe680;
+}
 h1 {
   font-size: 90px;
   color: ;
 }
-
-
 h2 {
 
 
+}
+div {
+  border: double;
 }
 p {
 
