--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffe680;
+  background-color: #ffcc66;
   color: whitesmoke;
   font-family: Josefin Slab;
   font-style: Semi-bold 600 italic;
