--- a/p1/css/main.css
+++ b/p1/css/main.css
@@ -1,32 +1,36 @@
 body {
   background-color: peru;
-  color: whitesmoke;
-  font-size: 30px;
-  font-family: Josefin Slab;
-  font-style: Semi-bold 600 italic;
+  font-size: 50px;
+  font-family: VT323;
+  color: black;
   margin: 50px;
 }
 h1 {
   font-size: 90px;
   font-family: VT323;
+  color: papayawhip;
+}
+h2 {
+  font-size: 50px;
+  font-family: VT323;
   color: black;
 }
 p {
-  font-size: 22px;
-  letter-spacing: .5px;
+  font-size: 40px;
+  letter-spacing: 2px;
   margin-top: 0;
 }
 a {
   text-decoration: none; /* this gets rid of the default underline */
 }
 a:link {
-  color: olive;
+  color: olivedrab;
 }
 a:visited {
-  color: maroon;
+  color: darkred;
 }
 a:hover {
-  color: floralwhite;
+  color: cornsilk;
 }
 a:active {
   color: whitesmoke;
