--- a/p1/css/main.css
+++ b/p1/css/main.css
@@ -3,7 +3,7 @@ body {
   font-size: 50px;
   font-family: VT323;
   color: black;
-  margin: 50px;
+  margin: 100px;
 }
 h1 {
   font-size: 90px;
@@ -24,10 +24,10 @@ a {
   text-decoration: none; /* this gets rid of the default underline */
 }
 a:link {
-  color: olivedrab;
+  color: darkred;
 }
 a:visited {
-  color: darkred;
+  color: midnightblue;
 }
 a:hover {
   color: cornsilk;
