--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,21 @@ body {
   font-size: 30px;
   font-family: Josefin Slab;
   font-style: Semi-bold 600 italic;
-  margin: 50px;
+  margin-top: 100px;
+  margin-left: 200px;
+}
+.exercise {
+  margin: 0;
+  background-color:white;
+}
+img {
+  max-width: 100%;
 }
 h1 {
-  font-size: 80px;
+  text-transform: uppercase;
+  letter-spacing: 1px
+  font-size: 4rem;
+  font-weight: bold;
   color: white;
 }
 p {
