--- a/e7/css/main.css
+++ b/e7/css/main.css
@@ -1,3 +1,25 @@
 body {
-  background-color: lemonchiffon; 
+  background-color: lavendarblush;
+  color: maroon;
+  font-size:20px;
+  font-family:Libre Baskerville;
+  font-style: regular 400;
+  margin: 50px;
+}
+h1 {
+  letter-spacing: 5px;
+  font-size:
+  font-weight:
+  color:
+}
+h2 {
+
+}
+h3 {
+
+}
+p {
+  font-size:
+  letter-spacing:
+  margin: 10px;
 }
