--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,11 @@ body {
 }
 .exercise {
   margin: 0;
-  background-color:white;
+  background-color: white;
+}
+@media screen and (max-width; 1000px)
+body {
+  background-color: lightpink
 }
 img {
   max-width: 100%;
