--- a/e7/css/main.css
+++ b/e7/css/main.css
@@ -1,43 +1,59 @@
 body {
-  background-color: plum;
-  font-size:20px;
-  font-family: Libre Baskerville;
+  background-color: #E9E7E4;
+  font-family: 'Libre Baskerville';
   font-style: regular 400;
 }
 h1 {
-  letter-spacing: 20px;
-  color: papayawhip;
+  font-family: 'Dancing Script', cursive;
+  font-size: 65px;
+  letter-spacing: 5px;
+  color: #532C1F;
   margin-left: 50px;
+  margin-bottom: 50px;
+  margin-top: 25px;
 }
 h2 {
-  letter-spacing: 10px;
-  color: lemonchiffon;
+  font-family: 'Dancing Script', cursive;
+  font-size: 30px;
+  letter-spacing: 5px;
+  color: #8E5441;
   margin-left: 50px;
+  margin-bottom: 50px;
 }
 h3 {
-  letter-spacing: 10px;
-  color: lemonchiffon;
+  font-family: 'Dancing Script', cursive;
+  font-size: 25px;
+  letter-spacing: 5px;
+  color: #B47A63;
   margin-left: 50px;
+  margin-bottom: 50px;
 }
 h4 {
-  letter-spacing: 10px;
-  font-weight: bold 700;
-  color: lemonchiffon;
+  font-family: 'Dancing Script', cursive;
+  font-size: 25px;
+  letter-spacing: 5px;
+  color: #B89789;
   margin-left: 50px;
+  margin-bottom: 50px;
 }
 h5 {
-  letter-spacing: 10px;
-  font-weight: bold 700;
-  color: mediumvioletred;
+  font-family: 'Dancing Script', cursive;
+  font-size: 25px;
+  letter-spacing: 2px;
+  color: peru;
   margin-left: 50px;
 }
 ul li {
-  color: mediumvioletred;
-  margin-left: 150px;
+  margin-left: 125px;
 }
 p {
-  font-size: 20px;
+  font-size: 16px;
   letter-spacing: 5px;
-  margin-left: 100px;
-  color: indigo;
+  margin-left: 75px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  color: midnightblue;
+}
+#contrast {
+  color: peru;
 }
