--- a/e11/css/main.css
+++ b/e11/css/main.css
@@ -11,8 +11,8 @@ body {
 .head {
   position: absolute;
   background-color: #6E4000;
-  top: 80px;
-  left: 500px;
+  top: 90px;
+  left: 505px;
   width: 200px;
   height: 180px;
   border-radius: 50%;
@@ -35,28 +35,27 @@ body {
   right: 10px;
   width: 70px;
   height: 60px;
-  border-radius: 200% 220% 220% 200%;
+  border-radius: 200% 220% 220% 220%;
 }
 .inner {
   position: absolute;
   background-color: #402602;
   top: 10px;
-  left: 10px;
+  left: 8px;
   width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  height: 30px;
+  border-radius: 200% 220% 220% 260%;
+  transform: rotate(-20deg);
 }
 .inner_right {
   position: absolute;
   background-color: #402602;
   top: 10px;
-  right: 10px;
+  right: 8px;
   width: 50px;
-  height: 50px;
-  border-top-left-radius: 180%;
-  border-top-right-radius: 180%;
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
+  height: 30px;
+  border-radius: 200% 220% 220% 180%;
+  transform: rotate(20deg);
 }
 .eye {
   position: absolute;
@@ -79,8 +78,8 @@ body {
 .mouth {
   position: absolute;
   background-color: #F7E3BA;
-  top: 110px;
-  left: -47px;
+  top: 95px;
+  left: 74px;
   width: 50px;
   height: 65px;
   border-radius: 90%;
@@ -88,13 +87,13 @@ body {
 }
 .nose {
   position: absolute;
-  top: 120px;
-  left: -35px;
+  top: 100px;
+  left: 87px;
   border-left: 13px solid transparent;
   border-right: 13px solid transparent;
   border-top: 13px solid black;
   border-radius: 40%;
-  transform: rotate(5deg);
+  transform: rotate(3deg);
 }
 .line1, .line2, .line3 {
   position: absolute;
@@ -102,20 +101,20 @@ body {
   width: 3px;
 }
 .line1 {
-  top: 130px;
-  left: -25px;
-  height: 12px;
+  top: 112px;
+  left: 97.3px;
+  height: 15px;
   transform: rotate(5deg);
 }
 .line2 {
-  top: 140px;
-  left: -30px;
+  top: 124px;
+  left: 92px;
   height: 17px;
   transform: rotate(35deg);
 }
 .line3 {
-  top: 142px;
-  left: -22px;
+  top: 125px;
+  left: 100px;
   height: 10px;
   transform: rotate(-35deg);
 }
@@ -123,8 +122,66 @@ body {
   position: absolute;
   background-color: #6E4000;
   top: 240px;
-  left: 518px;
-  width: 160px;
+  left: 525px;
+  width: 140px;
   height: 180px;
+  border-radius: 45%;
+}
+.hand_left {
+  position: absolute;
+  background-color: #6E4000;
+  top: -45px;
+  left: -50px;
+  width: 50px;
+  height: 120px;
+  border-radius: 45%;
+  transform: rotate(105deg);
+}
+.hand {
+  position: absolute;
+  background-color: #6E4000;
+  top: 10px;
+  left: 120px;
+  width: 50px;
+  height: 120px;
+  border-radius: 45%;
+  transform: rotate(-20deg);
+}
+.leg_left {
+  position: absolute;
+  background-color: #6E4000;
+  top: 120px;
+  left: 4px;
+  width: 60px;
+  height: 90px;
+  border-radius: 10%;
+  transform: rotate(0deg);
+}
+.leg {
+  position: absolute;
+  background-color: #6E4000;
+  top: 120px;
+  left: 75px;
+  width: 60px;
+  height: 90px;
+  border-radius: 10%;
+  transform: rotate(0deg);
+}
+.foot-left {
+  position: absolute;
+  background-color: #5C3700;
+  top: 0px;
+  left: 0px;
+  width: 63px;
+  height: 30px;
+  border-radius: 45%;
+}
+.foot {
+  position: absolute;
+  background-color: #5C3700;
+  top: 185px;
+  left: 74px;
+  width: 63px;
+  height: 30px;
   border-radius: 45%;
 }
