--- a/e11/css/main.css
+++ b/e11/css/main.css
@@ -167,11 +167,11 @@ body {
   border-radius: 10%;
   transform: rotate(0deg);
 }
-.foot-left {
+.foot_left {
   position: absolute;
   background-color: #5C3700;
-  top: 0px;
-  left: 0px;
+  top: 185px;
+  left: 3px;
   width: 63px;
   height: 30px;
   border-radius: 45%;
@@ -184,4 +184,36 @@ body {
   width: 63px;
   height: 30px;
   border-radius: 45%;
+}
+.fish {
+  position: absolute;
+  background-color: #FF7038;
+  top: 240px;
+  left: 440px;
+  width: 50px;
+  height: 100px;
+  border-radius: 60%;
+  transform: rotate(0deg);
+}
+.tail {
+  position: absolute;
+  top: 90px;
+  left: -5px;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid #FF7038;
+  border-radius: 10%;
+}
+.boat {
+  position: relative;
+  background-color: #FFEC19;
+  top: 450px;
+  left: 320px;
+  width: 500px;
+  height: 150px;
+  border-left: 50px;
+  border-right: 10px;
+  border-bottom: 10px;
+  border-top: 10px;
+  border-radius: 10%;
 }
