--- a/p2/css/main.css
+++ b/p2/css/main.css
@@ -1,10 +1,13 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
   color: black;
   background-color: #D0AE75;
   text-align: center;
-  margin: 20px;
+  margin: 0px;
   line-height: 40px;
   line-spacing: 15px;
 }
@@ -12,6 +15,8 @@ header {
   font-family: 'Playfair Display', serif;
   color: black;
   background-color: #FFFDED;
+  /*display: flow-root;
+  padding: 10px 50px; */
 }
 nav {
   text-align: right;
@@ -106,4 +111,8 @@ a:active {
 }
 .active {
   background-color: #009933;
+}
+.hero {
+  background: url(images/bg.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
