--- a/p2/css/main.css
+++ b/p2/css/main.css
@@ -1,17 +1,25 @@
 * {
   box-sizing: border-box;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 2000px) {
   .hero {
     padding: 50px 50px;
   }
-  .col {
-    width: 100%;
+  .img {
+    max-width: 100%;
+    /*background-color: blue;*/
   }
-  .col-margin {
+/*  header {
+    position: relative;
+  }*/
+/*  @media only screen and (max-width: 350px) {
+   header{
+     position: fixed;
+   }
+  }
+  .post {
     margin: 0;
-  }
-}
+  }*/
 body {
   background-color: #FFFDED;
   /*background-color: #D0AE75;*/
@@ -24,10 +32,11 @@ header {
   padding: 10px 50px;
   position: relative;
 }
-.title h1 a, h1 a:link, h1 a: visited {
+h1 a, h1 a:link, h1 a:visited {
   color: black;
+  text-decoration: none;
 }
-.title h1 a, h1 a:hover, h1 a: active {
+h1 a, h1 a:hover, h1 a:active {
   color: white;
 }
 nav {
@@ -56,44 +65,64 @@ li {
   padding: 250px 100px;
 }
 .hero h1 {
-  font-size: 6rem;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 300;
+  font-size: 10rem;
+  letter-spacing: 15px;
   margin-bottom: 25px;
   text-align: center;
   color: whitesmoke;
 }
-.row {
+.blog {
   display: flow-root;
-  width: 80vw;
-  margin: 0 auto;
-  padding: 25px 0;
+  width: 100vw;
+  margin: 10px auto;
+  padding: 10px 0;
+  text-align: center;
+  /*background-color: purple;*/
 }
-.col {
-  width: calc(50% - 12.5px);
-  float: left;
+.blog img {
+  max-width: 100%;
 }
-.col h2{
+.post {
+  /*width: calc(50% - 12.5px);*/
+  margin-bottom: 80px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+  /*background-color: yellow;*/
+}
+.post h2{
   font-family:
   color: black;
+  font-size: 50px;
   text-align: center;
+  letter-spacing: 5px;
+  line-height: 70px;
 }
-.col p{
-  font-family:
+.post p{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: px;
   color: black;
   text-align: center;
+  line-height: 25px;
 }
-.col-margin {
-  margin-right: 25px;
+.link {
+  padding: 15px 10px;
+  margin-bottom: 50px;
+  /*background-color: orange;*/
+  text-align: center;
 }
-.col img {
-  width: 100%;
-}
-.sectionbreak {
-  padding: 150px 100px;
-}
-.sectionbreak p {
+ p a, p a:link, p a:visited{
   font-size: 30px;
-  color: black;
-  text-align: center;
+  color: #817650;
+}
+p a, p a:hover, p a:active {
+    color: black;
+}
+.img {
+  max-width: 100%;
 }
   /*#menu {
     font-family: 'Roboto', sans-serif;
@@ -103,11 +132,17 @@ li {
     float: left;
     text-align: left;
 }*/
+
+}
 footer {
   background-color: #817650;
   padding: 50px 100px;
+  margin-top: 180px;
 }
 footer p {
-  color: whitesmoke;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  letter-spacing: 5px;
+  color: white;
   text-align: center;
 }
